kubernetes/apps/flux-system/add-ons/webhooks/github/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webhook-receiver
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`flux-receiver.${SECRET_DOMAIN}`) && PathPrefix(`/hook`)
      middlewares:
        - name: crowdsec-traefik-bouncer
      services:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
